--- a/RecipeListPage.xaml
+++ b/RecipeListPage.xaml
@@ -4,43 +4,63 @@
              x:Class="RecipeBook.RecipeListPage"
              x:Name="RecipeListPageRoot">
 
-    <ContentPage.BindingContext>
-        <viewmodels:RecipeListViewModel />
-    </ContentPage.BindingContext>
+    <VerticalStackLayout>
 
-    <CollectionView ItemsSource="{Binding Recipes}"
-                    SelectionMode="Single"
-                    SelectedItem="{Binding SelectedRecipe, Mode=TwoWay}">
-        <CollectionView.ItemTemplate>
-            <DataTemplate>
-                <Grid Padding="10" ColumnDefinitions="Auto,*" ColumnSpacing="10">
+        <CollectionView ItemsSource="{Binding Recipes}"
+                        SelectionMode="Single"
+                        SelectedItem="{Binding SelectedRecipe, Mode=TwoWay}">
+            <CollectionView.ItemTemplate>
+                <DataTemplate>
+                    <Grid Padding="10" ColumnDefinitions="Auto,*" ColumnSpacing="10">
 
-                    <Grid.GestureRecognizers>
-                        <TapGestureRecognizer
-                            NumberOfTapsRequired="2"
-                            Command="{Binding Source={RelativeSource AncestorType={x:Type ContentPage}}, Path=BindingContext.RecipeMenuCommand}"
-                            CommandParameter="{Binding .}" />
-                    </Grid.GestureRecognizers>
-                    <!-- Image in first column -->
-                    <Image Grid.Column="0"
-                           Source="{Binding ImageUrl}"
-                           WidthRequest="100"
-                           HeightRequest="100" />
+                        <Grid.GestureRecognizers>
+                            <TapGestureRecognizer
+                                NumberOfTapsRequired="2"
+                                Command="{Binding Source={RelativeSource AncestorType={x:Type ContentPage}}, Path=BindingContext.RecipeMenuCommand}"
+                                CommandParameter="{Binding .}" />
 
-                    <!-- Text in second column -->
-                    <VerticalStackLayout Grid.Column="1"
-                                         VerticalOptions="Center">
-                        <Label Text="{Binding Title}"
-                               FontAttributes="Bold"
-                               FontSize="16"/>
-                        <Label Text="{Binding Description}"
-                               FontAttributes="Italic"
-                               FontSize="14"
-                               TextColor="Gray"/>
-                    </VerticalStackLayout>
-                </Grid>
-            </DataTemplate>
-        </CollectionView.ItemTemplate>
-    </CollectionView>
+                            <SwipeGestureRecognizer 
+                                Direction="Right"
+                                Command="{Binding Source={RelativeSource AncestorType={x:Type ContentPage}}, Path=BindingContext.AddToFavoritesCommand}"
+                                CommandParameter="{Binding .}" />
+
+                            <SwipeGestureRecognizer 
+                                Direction="Left"
+                                Command="{Binding Source={RelativeSource AncestorType={x:Type ContentPage}}, Path=BindingContext.RemoveFromFavoritesCommand}"
+                                CommandParameter="{Binding .}" />
+                        </Grid.GestureRecognizers>
+
+                        <!-- Image in first column -->
+                        <Image Grid.Column="0"
+                               Source="{Binding ImageUrl}"
+                               WidthRequest="100"
+                               HeightRequest="100" />
+
+                        <!-- Text in second column -->
+                        <VerticalStackLayout Grid.Column="1"
+                                             VerticalOptions="Center">
+                            <Label Text="{Binding Title}"
+                                   FontAttributes="Bold"
+                                   FontSize="16" />
+                            <Label Text="{Binding Description}"
+                                   FontAttributes="Italic"
+                                   FontSize="14"
+                                   TextColor="Gray" />
+                        </VerticalStackLayout>
+                    </Grid>
+                </DataTemplate>
+            </CollectionView.ItemTemplate>
+        </CollectionView>
+
+        <!-- Your label goes here -->
+        <Label Text="{Binding ResultMessage}"
+       FontSize="16"
+       TextColor="Black"
+       Padding="10"
+       HorizontalOptions="Center"
+       VerticalOptions="End" />
+
+    </VerticalStackLayout>
 </ContentPage>
+
 
