--- a/RecipeListPage.xaml
+++ b/RecipeListPage.xaml
@@ -42,7 +42,7 @@
                             <Label Text="{Binding Title}"
                                    FontAttributes="Bold"
                                    FontSize="16" />
-                            <Label Text="{Binding Description}"
+                            <Label Text="{Binding Details.Description}"
                                    FontAttributes="Italic"
                                    FontSize="14"
                                    TextColor="Gray" />
